--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="small" id="meta"></div>
 
   <script>
-    const ENDPOINT = "PASTE_YOUR_APPS_SCRIPT_WEB_APP_URL";
+    const ENDPOINT = "https://script.google.com/macros/s/AKfycbyPHJ3AlqLT_mGX-Q534vUDdJCmdzc_IMUQZ3EZU0bbMBQ6ulPbyccqXmbhmxcQnU2mjA/exec";
 
     async function load() {
       const res = await fetch(ENDPOINT, { cache: "no-store" });
